src/argocd/bootstrap-resources/.deprecated/frigate/cam02/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-cam02
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cam02.ryanb.tv`)
      kind: Rule
      services:
        - name: frigate-cam02
          kind: Service
          port: http
  tls: {}
